# CommandCenter

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .zoho_token_cache.json  AGENTS.md  CCWORKBENCH_MEMORY.md  COMPETITIVE_COMPARISON.md  FOUNDATION_AUDIT_REPORT.md  FOUNDATION_BUILDOUT_CHECKLIST.md  FOUNDATION_CONTINUATION.md  Makefile  README.md  _test_byok_final.py  acb_dump.bak  agent_registry.json  agents.py  codegraph.json  config.json  gateway.pid  multi-agent.txt  pyproject.toml
.claude/: settings.json
.command-center/: integrations.json  tools.json
.github/: copilot-instructions.md
_templates/skill-template/: SKILL.md  pyproject.toml
_templates/skill-template/.github/workflows/: ci.yml
_templates/skill-template/skill_template/: __init__.py  core.py
_templates/skill-template/tests/: test_skill.py
ai-company-brain/: AGENTS.md  agent_repo_compatibility.md  agents-workspaces-artifacts.md  gantt_chart.md  product_requirements.md  project_plan.md  ref_copilot_sdk.md  ref_maf.md  ref_memory_architecture.md  reference.md  references.md  research_summary.md  risk_register.md  spec_chat_ux.md  spec_email_ai_assistant.md  spec_llm_caching_memory.md  spec_mcp_plugin_integration.md  spec_stream_reconnection.md  spec_vscode_tool_integration.md  system_architecture.md  wbs.md
apps/: AGENTS.md
apps/action_broker/: pyproject.toml
apps/action_broker/action_broker/: __init__.py  broker.py
apps/agent-cc-dev/: agents.py  config.json  instructions.md  pyproject.toml
apps/agent-email-assistant/: agents.py  config.json  instructions.md  pyproject.toml
apps/agents/agent-apis-config/: .gitignore  agents.py  instructions.md  pyproject.toml
apps/agents/agent-email-assistant/: agents.py  instructions.md  pyproject.toml
apps/agents/agent-task-manager/: agents.py  instructions.md  pyproject.toml
apps/agents/agent-whatsapp-assistant/: agents.py  config.json  instructions.md  pyproject.toml
apps/email_ingestion/: pyproject.toml
apps/email_ingestion/email_ingestion/: __init__.py  inbound.py  scheduler.py
apps/email_ingestion/email_ingestion/providers/: base.py  gmail.py  imap.py  label_colors.py  outlook.py
apps/gateway/: AGENTS.md  agents.json  pyproject.toml
apps/gateway/gateway/: chat_fold.py  main.py  run_trace.py
apps/gateway/gateway/routes/: agent.py  chat.py  debug.py  email.py  email_digest.py  integrations.py  memory.py  observability.py  settings.py  v1_compat.py  workspace.py
apps/gateway/gateway/routes/email/: core.py  digest.py
apps/gateway/gateway/routes/email/automation/: __init__.py  assistant.py  drafting.py  engine.py  identity.py  replyzero.py  rules.py  runner.py  senders.py
apps/gateway/gateway/routes/email/transport/: accounts.py  folders.py  messages.py  oauth.py  send.py  sync.py
apps/gateway/gateway/routes/tasks/: __init__.py  accounts.py  ai.py  attachments.py  capture_email.py  core.py  hierarchy.py  items.py  people.py  providers.py  scheduler.py  settings.py  sync.py
apps/orchestrator/: AGENTS.md  Dockerfile.mutation  mutation_runner.py  pyproject.toml
apps/orchestrator/orchestrator/: __init__.py  _model_resolution.py  agents.py  copilot_agent.py  event_translator.py  executor.py  graph.py  mutation.py  router.py  stream_relay.py  watchdog.py
apps/orchestrator/orchestrator/agents/: __init__.py  pull_agent.py  sales_pull_agent.py
apps/orchestrator/orchestrator/triage/: __init__.py  email.py
apps/reconciler/: pyproject.toml
apps/reconciler/reconciler/: __init__.py  main.py
apps/services/whatsapp_ingestion/: pyproject.toml
apps/services/whatsapp_ingestion/whatsapp_ingestion/: __init__.py  persist.py  post_sync.py  wa_embeddings.py
apps/services/whatsapp_ingestion/whatsapp_ingestion/providers/: __init__.py  base.py  cloud_api.py  factory.py  webhook.py
apps/skills/skill-clickup-sync/: SKILL.md  pyproject.toml
apps/skills/skill-clickup-sync/tests/: test_skill_clickup_sync.py
apps/skills/skill-task-gtd/: pyproject.toml
apps/skills/skill-task-gtd/skill_task_gtd/: __init__.py  core.py
deploy/: AGENTS.md
docs/: DESIGN_LIMITATION_native_maf_mutation.md
evals/: README.md  _runner.py  promptfoo.yaml
ide/: .gitignore  .tmp_readlog.js  README.md  lerna.json  package.json
infra/: AGENTS.md  custom_models.json  docker-compose.yml  enabled_models.json  provider_models_cache.json
learning-resources/: 00-glossary.md  01-architecture-overview.md  02-web-application.md  03-vps-hosting.md  04-cicd.md  05-auth-and-oauth.md  06-orchestration.md  07-agents.md  08-tool-calling.md  09-litellm-routing.md  10-mcp-and-integrations.md  11-microsoft-agent-framework.md  12-copilot-sdk-self-mutation.md  13-ag-ui-and-generative-ui.md  14-build-your-own.md  README.md
level4/: README.md
level4/apps/escalation_ui/: pyproject.toml
level4/apps/ingestion/: pyproject.toml
level4/apps/ingestion/ingestion/: __init__.py
level4/apps/ingestion/ingestion/sources/clickup/: client.py  webhook.py
level4/apps/ingestion/ingestion/sources/outlook/: __init__.py  client.py  normaliser.py  webhook.py
level4/apps/orchestrator/: pyproject.toml
level4/apps/orchestrator/orchestrator/: retrieval.py  sales_views.py
level4/apps/orchestrator/orchestrator/actions/: __init__.py  clickup.py
level4/apps/orchestrator/orchestrator/skills/: __init__.py
level4/apps/orchestrator/orchestrator/triage/: email.py  schema.py
scripts/: README.md  _audit_ui.py  _test_memory_e2e.py  _test_memory_tools.py  _test_reconnect_e2e.py  _test_stream.py  apply_migrations.sh  backfill_internet_message_id.py  bootstrap_local.ps1  check_infra.py  codebase_health.py  dump_schema.sh  feature_check.py  frontend_watchdog.ps1  gateway_watchdog.ps1  import_hr_people.py  merge_ghost_messages.py  n8n_export.py  repair_conversation_threads.py  run_chat_tests.sh  scan_secrets_history.sh  seed_demo.py  setup_secrets.sh  start_dev.ps1  start_gateway.sh  start_litellm.sh  test_chat.py  test_deepseek.py  test_direct.py  test_dns.py  test_models.py  validate_yaml.py
skill-observations/: log.md
skills/: AGENTS.md  README.md
tests/: README.md  (+1 more)
(+1191 files in other folders)
