# Root pyproject — uv workspace for the Jannet.AI platform monorepo.
# Active platform packages live under packages/; the shelved company-brain
# (Level 4) subtree lives under level4/. All members share a single
# .venv + lockfile so platform and L4 code build and test together.

[project]
name = "jannet-ai"
version = "0.0.1"
description = "Jannet.AI — self-hosted agent platform (cloud IDE → multi-agent → workflows → company intelligence)."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "Fracktal Works" }]
dependencies = [
    # Each member is brought in via the workspace; this top-level project is the umbrella.
    "acb-common",
    "acb-schemas",
    "acb-graph",
    "acb-llm",
    "acb-audit",
    "acb-skills",
    "acb-auth",
    "gateway",
    "orchestrator",
    "ingestion",
    "reconciler",
    "action-broker",
    "escalation-ui",
    "bcrypt>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-requests",
    "httpx>=0.27",
    "pre-commit>=4.0",
    "ipython>=8.29",
]

[tool.uv.workspace]
members = [
    "packages/*",
    "level4/packages/*",
    "level4/apps/*",
]

[tool.uv.sources]
acb-common    = { workspace = true }
acb-schemas   = { workspace = true }
acb-graph     = { workspace = true }
acb-llm       = { workspace = true }
acb-audit     = { workspace = true }
acb-skills     = { workspace = true }
acb-auth       = { workspace = true }
gateway        = { workspace = true }
orchestrator  = { workspace = true }
ingestion     = { workspace = true }
reconciler    = { workspace = true }
action-broker  = { workspace = true }
escalation-ui  = { workspace = true }

# ---------- Tooling config ----------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["workbench", "infra"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_decorators = false
exclude = ["workbench/", "infra/", "build/", "dist/"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests", "packages", "level4"]
pythonpath = ["level4"]
markers = [
    "integration: requires docker-compose stack",
    "slow: long-running tests",
]
