[project]
name = "action-broker"
version = "0.0.1"
description = "Approval queue + audit + source-of-truth writes (suggest+apply gate)."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "acb-common",
    "acb-graph",
    "acb-audit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["action_broker"]
