[project]
name = "agent-cc-dev"
version = "0.1.0"
description = "CommandCenter developer agent (GitHub Copilot SDK)"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-github-copilot",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
