[project]
name = "email-ingestion"
version = "0.1.0"
description = "Email ingestion service — multi-provider email sync (Gmail, Microsoft, IMAP)"
requires-python = ">=3.11"
dependencies = [
    "acb-common",
    "acb-llm",         # credential store / encryption
    "aiosmtpd>=1.4.6",  # Inbound SMTP server for receiving mail
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["email_ingestion"]
