[project]
name = "gateway"
version = "0.0.1"
description = "FastAPI + Google SSO. Pull queries, push notifications, approvals."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    # AG-UI streaming endpoint (replaces copilot_chat.py SSE path — WBS 0.7)
    "agent-framework-ag-ui",
    "acb-common",
    "acb-schemas",
    "acb-llm",
    "acb-auth",
    "orchestrator",
    "email-ingestion",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]
