[project]
name = "orchestrator"
version = "0.0.1"
description = "MAF workflow harness; tiered router; specialist sub-agents."
requires-python = ">=3.12,<3.14"
dependencies = [
    # MAF core (includes OpenAI + Azure OpenAI support by default)
    "agent-framework-core",
    # Separate OpenAI sub-package (explicit — avoids agent-framework[openai] meta-extra
    # which drags in agent-framework-core[all] → broken azure-search-documents on Windows)
    "agent-framework-openai",
    # GitHub Copilot agent (pre-release — install with: uv add --pre agent-framework-github-copilot)
    "agent-framework-github-copilot",
    # AG-UI streaming endpoint (replaces copilot_chat.py SSE path)
    "agent-framework-ag-ui",
    # RedisHistoryProvider + RedisContextProvider (pre-release)
    "agent-framework-redis",
    "httpx>=0.27",
    "acb-common",
    "acb-schemas",
    "acb-graph",
    "acb-llm",
    "acb-audit",
    "acb-skills",
    "acb-memory",
    "mem0ai>=2.0.4",
    "graphiti-core>=0.29.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
