[project]
name = "reconciler"
version = "0.0.1"
description = "Nightly diff + escalation queue."
requires-python = ">=3.12,<3.14"
dependencies = [
    "httpx>=0.27",
    "acb-common",
    "acb-schemas",
    "acb-graph",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reconciler"]
