[project]
name = "agent-apis-config"
version = "0.1.0"
description = "API Configuration Assistant MAF agent"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-github-copilot",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
