[project]
name = "agent-email-assistant"
version = "0.1.0"
description = "Email AI Assistant agent — read, search, summarize, and draft emails"
requires-python = ">=3.11"
dependencies = [
    "acb-common",
    "acb-skills",
    "agent-framework-core>=1.8.0",
    # Native MAF chat client → LiteLLM gateway /v1 (the agent uses agent_framework
    # Agent + OpenAIChatClient instead of the GitHub Copilot SDK).
    "agent-framework-openai>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
