[project]
name = "agent-task-manager"
version = "0.1.0"
description = "ClickUp task management MAF agent"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-github-copilot",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []