[project]
name = "skill-clickup-sync"
version = "0.1.0"
description = "ClickUp task retrieval skill for agent-task-manager"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skill_clickup_sync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]