[project]
name = "skill-task-gtd"
version = "0.1.0"
description = "Provider-agnostic GTD tools for agent-task-manager (capture/clarify/organize over the gateway /tasks API)"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "acb-common"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skill_task_gtd"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
