[project]
name = "escalation-ui"
version = "0.0.1"
description = "Streamlit escalation queue — Ack / Snooze / Resolve over reconciler audit events."
requires-python = ">=3.12,<3.14"
dependencies = [
    "streamlit>=1.40",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "acb-common",
    "acb-graph",
    "acb-audit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["escalation_ui"]