[project]
name = "ingestion"
version = "0.0.1"
description = "Webhook receivers, REST/poll workers, MCP clients for ClickUp/Zoho/Outlook/WhatsApp."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "redis>=5.2",
    "apscheduler>=3.10",
    "acb-common",
    "acb-schemas",
    "acb-graph",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]
