[project]
name = "orchestrator"
version = "0.0.1"
description = "LangGraph + Deep Agents harness; tiered router; specialist sub-agents."
requires-python = ">=3.12,<3.14"
dependencies = [
    "langgraph>=0.2",
    "deepagents>=0.6",
    "langchain-core>=0.3",
    "acb-common",
    "acb-schemas",
    "acb-graph",
    "acb-llm",
    "acb-audit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
